# rhythmos

./: .gitconfig  .gitignore  AUTHORS  INSTALL  Makefile.am  Makefile.in  README  aclocal.m4  configure  configure.ac  grub.img  index.html  params.json
doc/: .gitignore  BuildInstructions.html  BuildInstructions.texi  Makefile  Toolchain.html  Toolchain.texi  gnu.texi  rhythmos.texi  stamp-vti  standards.html  standards.info  syscalls.txt  version.sh  version.texi  version.texi.bak
lib/: Makefile.in  unistd.h
m4/: .gitignore  gnulib-cache.m4
src/: .gitignore  Makefile  Makefile.am  Makefile.in  buddy.c  buddy.h  calls.s  cat.c  constants.h  crtso.s  daemon.c  dsh.c  echo-cxx.cpp  echo.c  filedesc.c  filesystem.c  filesystem.img  find.c  fscalls.c  fstool.c  grub.img  halt.c  hello.c  hlt.c  init.c  interrupts.c  kernel.h  keyboard.c  kill.c  libc.c  link-user.ld  link.ld  list.c  ls.c  main.c  mk_boot_image.sh  mk_filesystem_image.sh  mkfstree.sh  mkfstree.sh~  mount-grub.sh  (+17 more)
src/include/: constants.h  filesystem.h  kernel.h  keyboard.h  list.h  rhythmos.h  user.h  version.h
